# impc_study

./: .gitignore  README.md  pyproject.toml
impc_study/methods/: utils.py
impc_study/methods/notebooks/: main.ipynb
